--- a/index.html
+++ b/index.html
@@ -7,23 +7,36 @@
     body{
         margin: 0;
     }
+    @media screen and (max-width:599px) {
+        body{
+            overflow-x: hidden;
+        }
+        .deviceWidth{
+            width: 100% !important;
+        }
+        .stack{
+            width: 100% !important;
+            display: block !important;
+        }
+        
+    }
 </style>
 </head>
 <body>
 
-<table width="100%" cellpadding="0" cellspacing="0" border="0" align="center" >
+<table width="100%" cellpadding="0" cellspacing="0" border="0" align="center" class="deviceWidth">
 <tbody>
     <tr>
         <td>
-            <table align="center" width="600" cellspacing="0" cellpadding="0" bgcolor="#0a90a7" border="0" style="width: 600px;">
+            <table align="center" width="600" cellspacing="0" cellpadding="0" bgcolor="#0a90a7" border="0" style="width: 600px;" class="deviceWidth">
                 <tbody>
                     <tr>
-                        <td valign="top">
-                            <table width="270" cellpadding="0" cellspacing="0" border="0" bgcolor="#0a90a7" style="background-color: #0a90a7;">
+                        <td valign="top" >
+                            <table width="270" cellpadding="0" cellspacing="0" border="0" bgcolor="#0a90a7" style="background-color: #0a90a7;" >
                                 <tbody>
                                     <tr>
                                         <td>
-                                            <table bgcolor="#404040" width="270" cellpadding="0" cellspacing="0" border="0">
+                                            <table bgcolor="#404040" width="270" cellpadding="0" cellspacing="0" border="0" >
                                                 <tbody>
                                                     <tr>
                                                         <td height="25" style="height: 25px;">&nbsp;
@@ -186,7 +199,7 @@
                             </table>
                         </td>
                         <td valign="top" >
-                            <table width="330" cellpadding="0" cellspacing="0" bgcolor="#ffffff" border="0" align="center" style="border-right: 2px solid #0a90a7;border-top: 2px solid #0a90a7;border-bottom: 2px solid #0a90a7;">
+                            <table width="330" cellpadding="0" cellspacing="0" bgcolor="#ffffff" border="0" align="center" style="border-right: 2px solid #0a90a7;border-top: 2px solid #0a90a7;border-bottom: 2px solid #0a90a7;" >
                                 <tbody>
                                     <tr>
                                         <td height="40" style="height: 40px;">
@@ -240,12 +253,67 @@
                                                         <td height="5" style="height: 5px;">
                                                         </td>
                                                     </tr>
+                                                    
                                                     <tr>
-                                                        <td valign="top" style="vertical-align: top;font-weight:normal;font-size: 12px;color: #242424;font-family: Arial, Helvetica, sans-serif;line-height: 16px;">
-                                                            • I have 2.2 years experience as a Web Developer in Indegene
+                                                        <td valign="top" style="vertical-align: top;font-weight:normal;font-size: 12px;color: #242424;font-family: Arial, Helvetica, sans-serif;line-height: 16px;"><table width="100%" cellspacing="0" cellpadding="0" border="0" align="left">
+                                                            <tbody>
+                                                                <tr>
+                                                                    <td valign="top">
+                                                                        •&nbsp;
+                                                                    </td>
+                                                                    <td valign="top" style="vertical-align: top;font-weight:normal;font-size: 12px;color: #242424;font-family: Arial, Helvetica, sans-serif;line-height: 16px;">
+                                                                        I have 2.6 years of experience as a Web Developer in Indegene
  Company, Tools are HTML5, CSS3, JavaScript and Photoshop.
+                                                                    </td>
+                                                                </tr>
+                                                            </tbody>
+                                                        </table>
                                                         </td>
                                                     </tr>
+                                                    <tr>
+                                                        <td valign="top" style="vertical-align: top;font-weight:normal;font-size: 12px;color: #242424;font-family: Arial, Helvetica, sans-serif;line-height: 16px;"><table width="100%" cellspacing="0" cellpadding="0" border="0" align="left">
+                                                            <tbody>
+                                                                <tr>
+                                                                    <td valign="top">
+                                                                        •&nbsp;
+                                                                    </td>
+                                                                    <td valign="top" style="vertical-align: top;font-weight:normal;font-size: 12px;color: #242424;font-family: Arial, Helvetica, sans-serif;line-height: 16px;">I worked on Adobe Campaign Projects with the email standards.
+                                                                    </td>
+                                                                </tr>
+                                                            </tbody>
+                                                        </table>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td valign="top" style="vertical-align: top;font-weight:normal;font-size: 12px;color: #242424;font-family: Arial, Helvetica, sans-serif;line-height: 16px;"><table width="100%" cellspacing="0" cellpadding="0" border="0" align="left">
+                                                            <tbody>
+                                                                <tr>
+                                                                    <td valign="top">
+                                                                        •&nbsp;
+                                                                    </td>
+                                                                    <td valign="top" style="vertical-align: top;font-weight:normal;font-size: 12px;color: #242424;font-family: Arial, Helvetica, sans-serif;line-height: 16px;">Tools we used for email development is Adobe Dreamweaver and I
+                                                                        have the knowledge on Litmus to test the Emailers.
+                                                                    </td>
+                                                                </tr>
+                                                            </tbody>
+                                                        </table>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td valign="top" style="vertical-align: top;font-weight:normal;font-size: 12px;color: #242424;font-family: Arial, Helvetica, sans-serif;line-height: 16px;"><table width="100%" cellspacing="0" cellpadding="0" border="0" align="left">
+                                                            <tbody>
+                                                                <tr>
+                                                                    <td valign="top">
+                                                                        •&nbsp;
+                                                                    </td>
+                                                                    <td valign="top" style="vertical-align: top;font-weight:normal;font-size: 12px;color: #242424;font-family: Arial, Helvetica, sans-serif;line-height: 16px;">I can develop/modify the email templates and existing campaigns.
+                                                                    </td>
+                                                                </tr>
+                                                            </tbody>
+                                                        </table>
+                                                        </td>
+                                                    </tr>
+
                                                     <tr>
                                                         <td height="30" style="height: 30px;">
                                                         </td>
